@@ -170,12 +170,14 @@ static UV lcm_ui(UV x, UV y) {
 /* See:  http://mersenneforum.org/showpost.php?p=110896 */
 static int is_perfect_square(UV n)
 {
-  UV m;
-  m = n & 127;
+  UV m = n & 127;
   if ((m*0x8bc40d7d) & (m*0xa1e2f5d1) & 0x14020a)  return 0;
+  /* On x86-64, sqrt is fast enough to stop testing here */
+#if !defined(__x86_64__)
   /* This cuts out another 80%: */
   m = n % 63; if ((m*0x3d491df7) & (m*0xc824a9f9) & 0x10f14008) return 0;
   /* m = n % 25; if ((m*0x1929fc1b) & (m*0x4c9ea3b2) & 0x51001005) return 0; */
+#endif
   m = isqrt(n);
   return m*m == n;
 }
